@@ -634,6 +634,18 @@ name|init
 argument_list|()
 expr_stmt|;
 block|}
+DECL|method|getDelegate
+specifier|public
+name|Directory
+name|getDelegate
+parameter_list|()
+block|{
+return|return
+name|this
+operator|.
+name|delegate
+return|;
+block|}
 DECL|method|getInputCloneCount
 specifier|public
 name|int
