@@ -110,6 +110,22 @@ name|lucene
 operator|.
 name|store
 operator|.
+name|IOContext
+operator|.
+name|Context
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|store
+operator|.
 name|NativeFSLockFactory
 import|;
 end_import
@@ -125,6 +141,20 @@ operator|.
 name|store
 operator|.
 name|NoLockFactory
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|store
+operator|.
+name|RateLimitedDirectoryWrapper
 import|;
 end_import
 
@@ -357,6 +387,26 @@ name|CloseListener
 argument_list|>
 argument_list|>
 argument_list|()
+decl_stmt|;
+DECL|field|maxWriteMBPerSecFlush
+specifier|private
+name|Double
+name|maxWriteMBPerSecFlush
+decl_stmt|;
+DECL|field|maxWriteMBPerSecMerge
+specifier|private
+name|Double
+name|maxWriteMBPerSecMerge
+decl_stmt|;
+DECL|field|maxWriteMBPerSecRead
+specifier|private
+name|Double
+name|maxWriteMBPerSecRead
+decl_stmt|;
+DECL|field|maxWriteMBPerSecDefault
+specifier|private
+name|Double
+name|maxWriteMBPerSecDefault
 decl_stmt|;
 DECL|interface|CloseListener
 specifier|public
@@ -1092,6 +1142,13 @@ argument_list|(
 name|fullPath
 argument_list|)
 expr_stmt|;
+name|directory
+operator|=
+name|rateLimit
+argument_list|(
+name|directory
+argument_list|)
+expr_stmt|;
 name|CacheValue
 name|newCacheValue
 init|=
@@ -1165,6 +1222,143 @@ name|directory
 return|;
 block|}
 block|}
+DECL|method|rateLimit
+specifier|private
+name|Directory
+name|rateLimit
+parameter_list|(
+name|Directory
+name|directory
+parameter_list|)
+block|{
+if|if
+condition|(
+name|maxWriteMBPerSecDefault
+operator|!=
+literal|null
+operator|||
+name|maxWriteMBPerSecFlush
+operator|!=
+literal|null
+operator|||
+name|maxWriteMBPerSecMerge
+operator|!=
+literal|null
+operator|||
+name|maxWriteMBPerSecRead
+operator|!=
+literal|null
+condition|)
+block|{
+name|directory
+operator|=
+operator|new
+name|RateLimitedDirectoryWrapper
+argument_list|(
+name|directory
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|maxWriteMBPerSecDefault
+operator|!=
+literal|null
+condition|)
+block|{
+operator|(
+operator|(
+name|RateLimitedDirectoryWrapper
+operator|)
+name|directory
+operator|)
+operator|.
+name|setMaxWriteMBPerSec
+argument_list|(
+name|maxWriteMBPerSecDefault
+argument_list|,
+name|Context
+operator|.
+name|DEFAULT
+argument_list|)
+expr_stmt|;
+block|}
+if|if
+condition|(
+name|maxWriteMBPerSecFlush
+operator|!=
+literal|null
+condition|)
+block|{
+operator|(
+operator|(
+name|RateLimitedDirectoryWrapper
+operator|)
+name|directory
+operator|)
+operator|.
+name|setMaxWriteMBPerSec
+argument_list|(
+name|maxWriteMBPerSecFlush
+argument_list|,
+name|Context
+operator|.
+name|FLUSH
+argument_list|)
+expr_stmt|;
+block|}
+if|if
+condition|(
+name|maxWriteMBPerSecMerge
+operator|!=
+literal|null
+condition|)
+block|{
+operator|(
+operator|(
+name|RateLimitedDirectoryWrapper
+operator|)
+name|directory
+operator|)
+operator|.
+name|setMaxWriteMBPerSec
+argument_list|(
+name|maxWriteMBPerSecMerge
+argument_list|,
+name|Context
+operator|.
+name|MERGE
+argument_list|)
+expr_stmt|;
+block|}
+if|if
+condition|(
+name|maxWriteMBPerSecRead
+operator|!=
+literal|null
+condition|)
+block|{
+operator|(
+operator|(
+name|RateLimitedDirectoryWrapper
+operator|)
+name|directory
+operator|)
+operator|.
+name|setMaxWriteMBPerSec
+argument_list|(
+name|maxWriteMBPerSecRead
+argument_list|,
+name|Context
+operator|.
+name|READ
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+return|return
+name|directory
+return|;
+block|}
 comment|/*    * (non-Javadoc)    *     * @see    * org.apache.solr.core.DirectoryFactory#incRef(org.apache.lucene.store.Directory    * )    */
 annotation|@
 name|Override
@@ -1226,7 +1420,56 @@ parameter_list|(
 name|NamedList
 name|args
 parameter_list|)
-block|{}
+block|{
+name|maxWriteMBPerSecFlush
+operator|=
+operator|(
+name|Double
+operator|)
+name|args
+operator|.
+name|get
+argument_list|(
+literal|"maxWriteMBPerSecFlush"
+argument_list|)
+expr_stmt|;
+name|maxWriteMBPerSecMerge
+operator|=
+operator|(
+name|Double
+operator|)
+name|args
+operator|.
+name|get
+argument_list|(
+literal|"maxWriteMBPerSecMerge"
+argument_list|)
+expr_stmt|;
+name|maxWriteMBPerSecRead
+operator|=
+operator|(
+name|Double
+operator|)
+name|args
+operator|.
+name|get
+argument_list|(
+literal|"maxWriteMBPerSecRead"
+argument_list|)
+expr_stmt|;
+name|maxWriteMBPerSecDefault
+operator|=
+operator|(
+name|Double
+operator|)
+name|args
+operator|.
+name|get
+argument_list|(
+literal|"maxWriteMBPerSecDefault"
+argument_list|)
+expr_stmt|;
+block|}
 comment|/*    * (non-Javadoc)    *     * @see    * org.apache.solr.core.DirectoryFactory#release(org.apache.lucene.store.Directory    * )    */
 annotation|@
 name|Override
