@@ -143,6 +143,13 @@ name|NamedList
 name|args
 parameter_list|)
 block|{
+name|super
+operator|.
+name|init
+argument_list|(
+name|args
+argument_list|)
+expr_stmt|;
 name|SolrParams
 name|params
 init|=
