@@ -60,7 +60,7 @@ name|java
 operator|.
 name|util
 operator|.
-name|Map
+name|LinkedList
 import|;
 end_import
 
@@ -80,7 +80,7 @@ name|java
 operator|.
 name|util
 operator|.
-name|LinkedList
+name|Map
 import|;
 end_import
 
@@ -118,20 +118,6 @@ name|lucene
 operator|.
 name|document
 operator|.
-name|Document
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|document
-operator|.
 name|Field
 import|;
 end_import
@@ -147,20 +133,6 @@ operator|.
 name|index
 operator|.
 name|IndexWriter
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|index
-operator|.
-name|IndexableField
 import|;
 end_import
 
@@ -203,6 +175,64 @@ operator|.
 name|index
 operator|.
 name|StoredDocument
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|store
+operator|.
+name|Directory
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|store
+operator|.
+name|IOContext
+operator|.
+name|Context
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|store
+operator|.
+name|MockDirectoryWrapper
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|store
+operator|.
+name|RateLimitedDirectoryWrapper
 import|;
 end_import
 
@@ -645,6 +675,7 @@ name|clearIndex
 argument_list|()
 expr_stmt|;
 comment|// test merge factor picked up
+comment|// and for rate limited settings
 name|SolrCore
 name|core
 init|=
@@ -657,7 +688,7 @@ name|RefCounted
 argument_list|<
 name|IndexWriter
 argument_list|>
-name|iw
+name|iwr
 init|=
 operator|(
 operator|(
@@ -679,6 +710,14 @@ argument_list|)
 decl_stmt|;
 try|try
 block|{
+name|IndexWriter
+name|iw
+init|=
+name|iwr
+operator|.
+name|get
+argument_list|()
+decl_stmt|;
 name|assertEquals
 argument_list|(
 literal|"Mergefactor was not picked up"
@@ -691,9 +730,6 @@ name|LogMergePolicy
 operator|)
 name|iw
 operator|.
-name|get
-argument_list|()
-operator|.
 name|getConfig
 argument_list|()
 operator|.
@@ -705,10 +741,149 @@ name|getMergeFactor
 argument_list|()
 argument_list|)
 expr_stmt|;
+name|Directory
+name|dir
+init|=
+name|iw
+operator|.
+name|getDirectory
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|dir
+operator|instanceof
+name|MockDirectoryWrapper
+condition|)
+block|{
+name|dir
+operator|=
+operator|(
+operator|(
+name|MockDirectoryWrapper
+operator|)
+name|dir
+operator|)
+operator|.
+name|getDelegate
+argument_list|()
+expr_stmt|;
+block|}
+name|assertTrue
+argument_list|(
+name|dir
+operator|.
+name|getClass
+argument_list|()
+operator|.
+name|getName
+argument_list|()
+argument_list|,
+name|dir
+operator|instanceof
+name|RateLimitedDirectoryWrapper
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|Double
+operator|.
+name|valueOf
+argument_list|(
+literal|1000000
+argument_list|)
+argument_list|,
+operator|(
+operator|(
+name|RateLimitedDirectoryWrapper
+operator|)
+name|dir
+operator|)
+operator|.
+name|getMaxWriteMBPerSec
+argument_list|(
+name|Context
+operator|.
+name|DEFAULT
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|Double
+operator|.
+name|valueOf
+argument_list|(
+literal|2000000
+argument_list|)
+argument_list|,
+operator|(
+operator|(
+name|RateLimitedDirectoryWrapper
+operator|)
+name|dir
+operator|)
+operator|.
+name|getMaxWriteMBPerSec
+argument_list|(
+name|Context
+operator|.
+name|FLUSH
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|Double
+operator|.
+name|valueOf
+argument_list|(
+literal|3000000
+argument_list|)
+argument_list|,
+operator|(
+operator|(
+name|RateLimitedDirectoryWrapper
+operator|)
+name|dir
+operator|)
+operator|.
+name|getMaxWriteMBPerSec
+argument_list|(
+name|Context
+operator|.
+name|MERGE
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|Double
+operator|.
+name|valueOf
+argument_list|(
+literal|4000000
+argument_list|)
+argument_list|,
+operator|(
+operator|(
+name|RateLimitedDirectoryWrapper
+operator|)
+name|dir
+operator|)
+operator|.
+name|getMaxWriteMBPerSec
+argument_list|(
+name|Context
+operator|.
+name|READ
+argument_list|)
+argument_list|)
+expr_stmt|;
 block|}
 finally|finally
 block|{
-name|iw
+name|iwr
 operator|.
 name|decref
 argument_list|()
